--- a/expenseswebsite/static/css/main.css
+++ b/expenseswebsite/static/css/main.css
@@ -49,3 +49,13 @@
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
   }
+
+  /* work begins */
+
+  .showPasswordToggle{
+    cursor: pointer;
+    transition: all;
+  }
+  .showPasswordToggle:hover {
+    transform: scale(1.2);
+  }
