--- a/templates/authentication/email_template.html
+++ b/templates/authentication/email_template.html
@@ -1,1 +1,5 @@
-<h1>hey {{username}}, welcome to the testing of django email</h1>
+hey {{username}}, welcome to the testing of django email
+
+activate your account by using this link 
+
+{{ activate_url }}
