--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -2,14 +2,20 @@
 
 {% block content %} 
 
-<h1>Expenses List</h1>
+<div class="container">
 
-<ul class='list-group'>
-    <li class='list-group-item'>bear</li>
-    <li class='list-group-item'>bear</li>
-    <li class='list-group-item'>bear</li>
-    <li class='list-group-item'>bear</li>
-    <li class='list-group-item'>bear</li>
-</ul>
+    {% include 'partials/_messages.html' %}
+    <h1>Expenses List</h1>
+
+    <ul class='list-group'>
+        <li class='list-group-item'>bear</li>
+        <li class='list-group-item'>bear</li>
+        <li class='list-group-item'>bear</li>
+        <li class='list-group-item'>bear</li>
+        <li class='list-group-item'>bear</li>
+    </ul>
+
+</div>
+
 
 {% endblock  %}
