--- a/templates/partials/_sidebar.html
+++ b/templates/partials/_sidebar.html
@@ -6,11 +6,11 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">
             <span data-feather="home" class="align-text-bottom"></span>
-            Dashboard
+            Dashboard <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="{% url 'expenses' %}">
             Expenses
           </a>
         </li>
