--- a/templates/expenses/edit-expense.html
+++ b/templates/expenses/edit-expense.html
@@ -2,16 +2,23 @@
 {% block content %} 
 
 <div class="container mt-4">
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'expenses' %}">Expenses</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Add Expenses</li>
-        </ol>
-    </nav>
+    <div class="row">
+        <div class="col-md-10">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{% url 'expenses' %}">Expenses</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Edit Expense</li>
+                </ol>
+            </nav>
+        </div>
+        <div class="col-md-2">
+            <a href="{% url 'expense-delete' expense.id %}" class='btn btn-danger btn-sm'>Delete</a>
+        </div>
+    </div>
 
         <div class="card">
             <div class="card-body">
-                <form action="{% url 'add-expense' %}" method='post'>
+                <form action="{% url 'expense-edit' expense.id %}" method='post'>
                     {% include 'partials/_messages.html' %}
                     {% csrf_token %} 
                     <div class="form-group">
@@ -26,6 +33,7 @@
                     <div class="form-group">
                         <label for="">Category</label>
                         <select class='form-control' name="category">
+                            <option selected name='category' value="{{values.category}}">{{values.category}}</option>
                             {% for category in categories %}
                                 <option name='category' value="{{category.name}}">{{category.name}}</option>
                             {% endfor %}
@@ -37,7 +45,7 @@
                         <input type="date" class="form-control form-control-sm" name='expense_date'>
                     </div>
                     <br>
-                    <input type="submit" value='submit' class='btn btn-primary btn-primary-sm'>
+                    <input type="submit" value='Save' class='btn btn-primary btn-primary-sm'>
                 </form>
             </div>
         </div>
