--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -2,20 +2,52 @@
 
 {% block content %} 
 
-<div class="container">
+<div class="container mt-4 ">
+    <div class="row">
+        <div class="col-md-10">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="">Expenses</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">My Expenses</li>
+                </ol>
+            </nav> 
+        </div>
+    
+        <div class="col-md-2">
+            <a href="{% url 'add-expense' %}" class='btn btn-primary'>Add expense</a>
+        </div>
+    </div>
+    <div class="container">
+        {% include 'partials/_messages.html' %} 
+        {% if expenses.count %}
+        <table class="table table-strapped table-hover">
+            <thead>
+                <tr>
+                    <th>Amount (Currency)</th>
+                    <th>Category</th>
+                    <th>Description</th>
+                    <th>Date</th>
+                    <th> </th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for expense in expenses %}
+                <tr>
+                    <td>{{expense.amount}}</td>
+                    <td>{{expense.category}}</td>
+                    <td>{{expense.description}}</td>
+                    <td>{{expense.date}}</td>
+                    <td>{{expense.owner}}</td>
 
-    {% include 'partials/_messages.html' %}
-    <h1>Expenses List</h1>
-
-    <ul class='list-group'>
-        <li class='list-group-item'>bear</li>
-        <li class='list-group-item'>bear</li>
-        <li class='list-group-item'>bear</li>
-        <li class='list-group-item'>bear</li>
-        <li class='list-group-item'>bear</li>
-    </ul>
-
+                    <td> <a href="{% url 'expense-edit' expense.id %}" class='btn btn-secondary btn-sm'>Edit</a></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table> 
+        {% endif %}
+    </div>
 </div>
+
 
 
 {% endblock  %}
