--- a/templates/preferences/index.html
+++ b/templates/preferences/index.html
@@ -1,23 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container mt-3">
+    <h5>Preffered Currency</h5>
+    {% include 'partials/_messages.html' %}
+    <form action="{% url 'preferences' %}" method="post">
+        {% csrf_token %}
+        <div class="input-group">
+            <select name='currency' class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
 
-<div class="container">
+                {% if user_preferences.currency %}
+                <option selected name="currency" value='{{user_preferences.currency}}'>{{ user_preferences.currency }}</option>
+                {% endif %}
+                
+            
+                {% for currency in currencies %}
+                <option name='currency' value='{{currency.name}} - {{currency.value}}'>
+                    {{currency.name}} - {{currency.value}}
+                </option>
+                
+                {% endfor %}
+            </select>
+            <button class="btn btn-outline-secondary" type="submit">Save</button>
+        </div>
+    </form>
+    
+</div>
 <h1>Profile currency</h1>
 <hr>
-
-<div class="input-group">
-    <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
-      <option selected>Choose...</option>
-      <option value="1">One</option>
-      <option value="2">Two</option>
-      <option value="3">Three</option>
-    </select>
-    <button class="btn btn-outline-secondary" type="button">Button</button>
-  </div>
-
-</div>
-
 
 
 {% endblock  %}
