--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %} 
 
@@ -17,54 +18,89 @@
             <a href="{% url 'add-expense' %}" class='btn btn-primary'>Add expense</a>
         </div>
     </div>
+    <br>
     <div class="container">
         {% include 'partials/_messages.html' %} 
         {% if expenses.count %}
-        <table class="table table-strapped table-hover">
-            <thead>
-                <tr>
-                    <th>Amount (Currency)</th>
-                    <th>Category</th>
-                    <th>Description</th>
-                    <th>Date</th>
-                    <th> </th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for expense in page_obj %}
-                <tr>
-                    <td>{{expense.amount}}</td>
-                    <td>{{expense.category}}</td>
-                    <td>{{expense.description}}</td>
-                    <td>{{expense.date}}</td>
-                    <td>{{expense.owner}}</td>
 
-                    <td> <a href="{% url 'expense-edit' expense.id %}" class='btn btn-secondary btn-sm'>Edit</a></td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table> 
-
-        <div class="">
-            Showing page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+        <div class="row">
+            <div class="col-md-8"></div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <input type="text" placeholder='Search' class="form-control" id='searchField'>
+                </div>
+            </div>
         </div>
 
-        <ul class="pagination align-items-end float-end mr-auto">
-            {% if page_obj.has_previous %}
-            <li {% if page_obj.number == 1 %} class="page-item active" {% endif %}><a class="page-link" href="?page=1">&laquo; 1</a></li>
-            <li class="page-item"> <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
-            {% endif %}
-      
-            {% if page_obj.has_next %}
-            <li class="page-item"> <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
-            <li class="page-item"> <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages}} &raquo;</a></li>
-            {% endif %}
-        </ul>
+        <div class="app-table">
+            <table class="table table-strapped table-hover">
+                <thead>
+                    <tr>
+                        <th>Amount (Currency)</th>
+                        <th>Category</th>
+                        <th>Description</th>
+                        <th>Date</th>
+                        <th> </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for expense in page_obj %}
+                    <tr>
+                        <td>{{expense.amount}}</td>
+                        <td>{{expense.category}}</td>
+                        <td>{{expense.description}}</td>
+                        <td>{{expense.date}}</td>
+                        <td>{{expense.owner}}</td>
 
+                        <td> <a href="{% url 'expense-edit' expense.id %}" class='btn btn-secondary btn-sm'>Edit</a></td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table> 
+        </div>
+        
+        
+
+        <div class="table-output">
+            <table class="table table-strapped table-hover">
+                <thead>
+                    <tr>
+                        <th>Amount (Currency)</th>
+                        <th>Category</th>
+                        <th>Description</th>
+                        <th>Date</th>
+                        <th> </th>
+                    </tr>
+                </thead>
+                <tbody class='table-body'>
+                    
+                </tbody>
+            </table> 
+        </div>
+        
+        <div class="pagination-container">
+
+            <div class="">
+                Showing page {{page_obj.number}} of {{page_obj.paginator.num_pages}}
+            </div>
+
+            <ul class="pagination align-items-end float-end mr-auto">
+                {% if page_obj.has_previous %}
+                <li {% if page_obj.number == 1 %} class="page-item active" {% endif %}><a class="page-link" href="?page=1">&laquo; 1</a></li>
+                <li class="page-item"> <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+                {% endif %}
+        
+                {% if page_obj.has_next %}
+                <li class="page-item"> <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+                <li class="page-item"> <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages}} &raquo;</a></li>
+                {% endif %}
+            </ul>
+
+        </div>
         {% endif %}
     </div>
 </div>
-
+<script src="{% static 'js/searchExpenses.js' %}" ></script>
 
 
 {% endblock  %}
