--- a/templates/base.html
+++ b/templates/base.html
@@ -20,14 +20,28 @@
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
-  <div class="navbar-nav">
-    <div class="nav-item text-nowrap">
+  
+  <div class="navbar-nav px-3" style="display: flex; flex-direction: row; align-items: center;">
+
+    {% comment %} <div class="nav-item text-nowrap">
+      <a action="{% url 'logout' %}" class='nav-link'>
+
+      </a>
+    </div> {% endcomment %}
+
+    <li class="nav-item text-nowrap">
+      <span class="nav-link" href="">
+        ({{request.user.username}})
+      </span>
+    </li>
+
+    <div class="nav-item text-nowrap mt-3 ml-2">
       <form action="{% url 'logout' %}" method='POST'>
         {% csrf_token %}
         <input class="text text-capitalize" type="submit" value="Sign Out">
       </form>
     </div>
+
   </div>
 </header>
 
