--- a/templates/expenses/edit-expense.html
+++ b/templates/expenses/edit-expense.html
@@ -42,7 +42,7 @@
                     <br>
                     <div class="form-group">
                         <label for="">Date of Expense</label>
-                        <input type="date" class="form-control form-control-sm" name='expense_date'>
+                        <input type="date" value='{{values.date | date:"Y-m-d"}}' class="form-control form-control-sm" name='expense_date'>
                     </div>
                     <br>
                     <input type="submit" value='Save' class='btn btn-primary btn-primary-sm'>
