--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -36,7 +36,7 @@
             <table class="table table-strapped table-hover">
                 <thead>
                     <tr>
-                        <th>Amount (Currency)</th>
+                        <th>Amount ({{currency}})</th>
                         <th>Category</th>
                         <th>Description</th>
                         <th>Date</th>
@@ -65,7 +65,7 @@
             <table class="table table-strapped table-hover">
                 <thead>
                     <tr>
-                        <th>Amount (Currency)</th>
+                        <th>Amount ({{currency}})</th>
                         <th>Category</th>
                         <th>Description</th>
                         <th>Date</th>
