--- a/templates/authentication/set-newpassword.html
+++ b/templates/authentication/set-newpassword.html
@@ -1,10 +1,57 @@
 {% extends 'base_auth.html' %}
+{% load static %}
+
 {% block content %}
 
-<div class="card">
-    <div class="card-body">
-        <h1>Set New Password</h1>
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <div class="card mt-5" >
+            <div class="card-body">
+                <div class="card-title py-3">
+                    <h4>Set your new password</h4>
+                </div>
+
+                <form action="{% url 'reset-user-password' uidb64 token %}" method='post'>
+                    {% csrf_token %}
+
+                    {% include 'partials/_messages.html' %}
+
+                    <div class="form-group">
+                        <input type="password" 
+                        name="password" 
+                        placeholder="Password"
+                        id="passwordField" 
+                        class="form-control form-control-sm">
+                        <small class="float-end py-2 showPasswordToggle">SHOW</small>
+                    </div>
+                    <br>
+                    <div class="form-group">
+                        <input type="password" 
+                        name="password2" 
+                        placeholder="Confirm Password"
+                        id="passwordField" 
+                        class="form-control form-control-sm">
+                        <small class="float-end py-2 showPasswordToggle">SHOW</small><br>
+                    </div>
+                     
+                    <br>
+                    <div class="d-grid">
+                        <input type="submit" value="Submit" class="btn btn-primary submit-btn">
+                    </div>
+                </form>
+            </div>
+
+            <div class="container">
+                <span> Have an account? <a href="{% url 'login' %}">Login</a> </span><br>
+                <span> No account? <a href="{% url 'register' %}">Register</a> </span>
+            </div>
+
+        </div>
     </div>
+    <div class="col-md-4"></div>
 </div>
+
+<script src="{% static 'js/register.js' %}"></script>
 
 {% endblock  %}
