--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -59,6 +59,11 @@
                     </div>
                 </form>
             </div>
+
+            <div class="container">
+                <span> Have an account? <a href="{% url 'login' %}">Login</a> </span>
+            </div>
+
         </div>
     </div>
     <div class="col-md-4"></div>
