--- a/templates/authentication/reset-password.html
+++ b/templates/authentication/reset-password.html
@@ -1,10 +1,49 @@
 {% extends 'base_auth.html' %}
+{% load static %}
+
 {% block content %}
 
-<div class="card">
-    <div class="card-body">
-        <h1>Reset Password</h1>
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <div class="card mt-5" >
+            <div class="card-body">
+                <div class="card-title py-3">
+                    <h4>Please enter your registered email to get reset link</h4>
+                </div>
+
+                <form action="{% url 'reset-link' %}" method='post'>
+                    {% csrf_token %}
+
+                    {% include 'partials/_messages.html' %}
+
+                    <div class="form-group">
+                        <input type="email" 
+                        name="email" 
+                        placeholder="Email"
+                        id="emailField" 
+                        value="{{values.email}}"
+                        class="form-control form-control-sm">
+                    </div>
+
+                    <br>
+
+                    <div class="d-grid">
+                        <input type="submit" value="Submit" class="btn btn-primary submit-btn">
+                    </div>
+                </form>
+            </div>
+
+            <div class="container">
+                <span> Have an account? <a href="{% url 'login' %}">Login</a> </span> <br>
+                <span> Dont have an account? <a href="{% url 'register' %}">Register</a> </span>
+            </div>
+
+        </div>
     </div>
+    <div class="col-md-4"></div>
 </div>
+
+<script src="{% static 'js/register.js' %}"></script>
 
 {% endblock  %}
