--- a/templates/base_auth.html
+++ b/templates/base_auth.html
@@ -17,10 +17,7 @@
 
         <main>
 
-                {% block content %}
-
-                {% endblock  %}
-
+          {% block content %}{% endblock  %}
         
         </main>
 
