--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -29,7 +29,9 @@
             <div class="col-md-8"></div>
             <div class="col-md-4">
 
-                <a href="{% url 'export-csv' %}" class='btn btn-secondary'>Export CSV</a>                
+                <a href="{% url 'export-excel' %}" class='btn btn-primary'>Export Excel</a>       
+
+                <a href="{% url 'export-csv' %}" class='btn btn-secondary'>Export CSV</a>       
 
                 <div class="form-group">
                     <input type="text" placeholder='Search' class="form-control" id='searchField'>
