--- a/templates/expenses/index.html
+++ b/templates/expenses/index.html
@@ -31,7 +31,9 @@
 
                 <a href="{% url 'export-excel' %}" class='btn btn-primary'>Export Excel</a>       
 
-                <a href="{% url 'export-csv' %}" class='btn btn-secondary'>Export CSV</a>       
+                <a href="{% url 'export-csv' %}" class='btn btn-secondary'>Export CSV</a>  
+
+                <a href="{% url 'export-pdf' %}" class='btn btn-info'>Export PDF</a>       
 
                 <div class="form-group">
                     <input type="text" placeholder='Search' class="form-control" id='searchField'>
